# sample-site

./: .gitignore  .travis.yml  README  cabal.project  shell.nix
app/: ChangeLog.md  Main.hs  app.cabal  wrapper.c  wrapper.h
deploy/docker/: docker-compose.yml  rts.json
deploy/docker/config/prometheus/: prometheus.yml
nix/: default.nix  docker.nix  fetch.nix  overlays.nix  release.nix  versions.json
sample-site/: CHANGELOG.md  LICENSE  README.md  sample-site.cabal  swagger.json
sample-site/app/: Main.hs
sample-site/src/: WebExperiments.hs
sample-site/src/Data/Aeson/: Extended.hs
sample-site/src/Sample/: Api.hs  Server.hs
sample-site/src/Servant/API/: Extended.hs
sample-site/test/spec/Sample/: ApiSpec.hs
